# draw

./: .gitignore  11804_Airplane_v2_l2.mtl  Cargo.toml  README.md  build.rs  readme
models/lemur/: lemur.blend  lemur.fbx  lemurr.mtl
models/skeleton/: fgc_skeleton.mtl
models/soldier1/: soldier1.mtl
src/: draw.rs  lib.rs  main.rs  microbench.rs  scene.rs  window.rs
src/app/: gui.rs  mod.rs  window.rs
src/app/window/: mod.rs  wayland_impl.rs  window_decorator.rs  x11_impl.rs
src/draw/: alglin.rs  canva.rs  canvas.rs  linalg.rs  renderer.rs  scene.rs
src/draw/renderer/: canvas.rs  scene.rs
src/renderer/: canvas.rs  linalg.rs  scene.rs
src/renderer/scene/: mesh.rs  mod.rs  object.rs
src/utils/: microbench.rs  mod.rs
