[package]
name = "draw"
version = "0.1.0"
edition = "2021"
links = "X11"
build = "build.rs"

[dependencies]
font-awesome = "0.2.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "5d771a8"} # https://github.com/imgui-rs/imgui-rs/pull/779
itertools = "0.13.0"
material-icons = "0.2.0"
obj = { git = "https://github.com/kvark/obj.git" }
rand = "0.8.5"
rfd = { version = "0.15.2",  default-features = false, features = ["xdg-portal", "tokio"] }
stb = { git = "https://github.com/mororo18/stb.git", branch = "fix-ubuntu-24.10-build" }
#stb = version = "0.3.2"
x11 = { git = "https://github.com/mororo18/x11-rs.git" }

[rust]
debug = true
debuginfo-level = 1

[profile.release]
debug = 1
